src/objects/DRE__DTE_Plan_Data_Set__c.object
<CustomObject>
    <fields>
        <fullName>DRE__DTE_Data_Set__c</fullName>
        <label>DTE Data Set</label>
        <referenceTo>DRE__DTE_Data_Set__c</referenceTo>
        <relationshipName>DTE_Plan_Data_Sets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__DTE_Plan__c</fullName>
        <label>DTE Plan</label>
        <referenceTo>DRE__DTE_Plan__c</referenceTo>
        <relationshipName>DTE_Plan_Data_Sets</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DRE__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>DTE Test Data Set</label>
    <nameField>
        <displayFormat>DTETSTSET-{00000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DTE Test Data Sets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>